# relevefacile

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  sentry.client.config.ts
.github/workflows/: ci.yml
parser/: fly.toml  pyproject.toml  requirements-dev.txt  requirements.txt
parser/app/: config.py  dependencies.py  main.py  models.py
parser/app/parsers/: banque_populaire.py  base.py  bnp_paribas.py  boursorama.py  caisse_epargne.py  credit_agricole.py  credit_mutuel.py  detector.py  generic.py  la_banque_postale.py  lcl.py  registry.py  societe_generale.py
parser/app/routers/: detect.py  parse.py
parser/scripts/: generate_test_pdfs.py
parser/tests/: conftest.py  test_health.py
parser/tests/test_parsers/: test_amount_parsing.py  test_banque_populaire.py  test_boursorama.py  test_caisse_epargne.py  test_credit_agricole.py  test_credit_mutuel.py  test_detector.py  test_la_banque_postale.py  test_lcl.py  test_societe_generale.py
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
src/components/: PricingCards.tsx
src/components/conversion/: ExportOptions.tsx  TransactionPreview.tsx  UploadZone.tsx
src/components/layout/: Footer.tsx  Header.tsx  TestModeBanner.tsx
src/data/: banks.ts
src/lib/: config.ts  parser-client.ts  types.ts
src/lib/__tests__/: csv.test.ts
supabase/migrations/: 001_initial_schema.sql  002_subscriptions.sql  003_conversion_logs.sql  004_api_keys.sql
(+34 files in other folders)
