[project]
name = "relevefacile-parser"
version = "0.1.0"
description = "PDF bank statement parser service for ReleveFacile"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
